unpackaged/main/default/objects/ETSALES_Operating_unit__c/ETSALES_Operating_unit__c.object-meta.xml
<CustomObject>
    <label>Operating unit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Operating unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>