unpackaged/main/default/objects/ETSALES_Operating_unit__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1121</fullName>
                <label>ATSC-Maintenance Lumpsum</label>
            </value>
            <value>
                <fullName>ATAL-COVID-19</fullName>
            </value>
            <value>
                <fullName>ATAL-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>ATAL-Open Contract</fullName>
            </value>
            <value>
                <fullName>Trans AD</fullName>
            </value>
            <value>
                <fullName>ECTC-COVID-19</fullName>
            </value>
            <value>
                <fullName>ECTC-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>ECTC-Open Contract</fullName>
            </value>
            <value>
                <fullName>ECC-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>ETSC-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>ETSC-Maintenance Labor</fullName>
            </value>
            <value>
                <fullName>ETSC-Maintenance Lumpsum</fullName>
            </value>
            <value>
                <fullName>LSS-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>ETAL-COVID-19</fullName>
            </value>
            <value>
                <fullName>ETAL-COVID-19-Open Contract</fullName>
            </value>
            <value>
                <fullName>ETAL-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>ETAL-Open Contract</fullName>
            </value>
            <value>
                <fullName>GT-AJM-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-ALN-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-AUH-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-CR-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-DXB-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-EC-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-RAK-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-SHJ-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>GT-WR-Lease and Rental</fullName>
            </value>
            <value>
                <fullName>ET-Advertisement Contract</fullName>
            </value>
            <value>
                <fullName>ET-IT Services</fullName>
            </value>
            <value>
                <fullName>PTC-Lease and Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>