unpackaged/main/default/objects/ETSALES_Operating_unit__c/fields/ETSALES_Date_To__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Date_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date To</label>
    <type>Date</type>
</CustomField>