unpackaged/main/default/objects/ETSALES_Operating_unit__c/fields/ETSALES_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Organization_Id__c</fullName>
    <externalId>true</externalId>
    <label>Organization Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>