unpackaged/main/default/objects/ETSALES_Operating_unit__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
            <value>
                <fullName>T&amp;L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>