unpackaged/main/default/objects/ETSALES_Operating_unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETSALES_Date_From__c</columns>
    <columns>ETSALES_Date_To__c</columns>
    <columns>ETSALES_Organization_Id__c</columns>
    <columns>Sector__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>